--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -96,7 +96,7 @@ hr {
 .showcase {
     width: 100%;
     height: 550px;
-    background: url("/docs/img/showcase2.jpg") no-repeat center center/cover;
+    background-image: url("/docs/img/showcase2.jpg") no-repeat center center/cover;
     padding: 50px;
     margin-bottom: 20px;
     display: flex;
